<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/horizontal_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sensor_type"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/chart_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@id/horizontal_heading"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.mtuity.sensordetections.VerticalTextView
            android:id="@+id/verticle_heading"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/force_of_gravity"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/chart_layout_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/chart_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/chart_layout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chart_layout"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/no_parking_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_below="@id/chart_layout"
                    android:layout_marginRight="5dp"
                    android:background="@color/no_parking" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chart_layout"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/x_axis_acceleration_force"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/light_black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/limit_exceed_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_below="@id/chart_layout"
                    android:layout_marginRight="5dp"
                    android:background="@color/limit_exeed" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/chart_layout"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@id/no_parking_bar"
                    android:gravity="center"
                    android:text="@string/y_axis_acceleration_force"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/light_black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/over_stay_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chart_layout_one"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_below="@id/no_parking_bar"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@color/over_stay"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/no_parking_bar"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/z_axis_acceleration_force"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>